--- a/Front/vite-project/src/static/animais_regioes.css
+++ b/Front/vite-project/src/static/animais_regioes.css
@@ -1,6 +1,7 @@
 
 .bd-anml {
   background-color: var(--cor-clara-1);
+  overflow-x: hidden;
 }
 
 .title-anml, .subtitle-anml, .anml-name {
@@ -25,7 +26,7 @@
 }
 
 .container-anml {
-  height: 150vh;
+  height: 50vh;
 }
 
 .light {
@@ -36,9 +37,6 @@
   background-color: var(--cor-animal-clara-2);
 }
 
-.swiper-slide {
-  width: 60%
-}
 
 .anml-card {
   display: block;
@@ -47,6 +45,7 @@
   width: 60%;
   text-align: center;
   border-radius: 1em;
+  z-index: 2;
 }
 
 .card-light {
