--- a/Front/vite-project/src/templates/animais_especies.html
+++ b/Front/vite-project/src/templates/animais_especies.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="jpg" href="../assets/images/logoIJ.png" />
-    <link rel="stylesheet" href="../index.css"/>
+    <link rel="stylesheet" href="../index.css"/> 
     <link rel="stylesheet" href="../reset.css"/>
+    <link rel="stylesheet" href="../static/animais_regioes.css"/>
+    <link rel="stylesheet" href="../static/carousel.css"/>
+ 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="../../index.js"></script>
     <title>Nossos Animais - Espécies</title>
   </head>
   <body class="bd-anml">
@@ -56,142 +58,140 @@
         </div>
       </nav>
     </header> 
-
+    
     <h2 class="title-principal title-anml">Nossos animais e seus habitats!</h2>
     <section class="container-anml light">
-    <h3 class="subtitle-anml">Réptil</h3>
-    <!--criar carrossel-->
-    <p class = "region">
-      <ul class = "region anml-list">
-        <li class = "anml-card card-light">
-          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-          <h2 class="anml-name">Iporã</h2>
-          <h4 class="anml-spe">Jabuti-tinga</h4>
-          <h5 class="anml-spe"><em class="sci-name-item">Chelonoidis denticulatus</em></h5>
-          <h4 class="anml-spe">Amazônia</h4>
-          <ul class="anml-data">
-            <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
-            <li class="anml-data-item"><label class="label male">Macho</label></li>
-          </ul>     
-        </li>
-      </ul>
-    </p>
-  </div>
-    
-  </section>
-  <section class="container-anml medium">
+      <h3 class="subtitle-anml">Réptil</h3>
+      <div class="carousel">
+        <ul class = "carousel-list region anml-list carousel-list">
+          <li class = "carousel-item anml-card card-light">
+            <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+            <h2 class="anml-name">Iporã</h2>
+            <h4 class="anml-spe">Jabuti-tinga</h4>
+            <h5 class="anml-spe"><em class="sci-name-item">Chelonoidis denticulatus</em></h5>
+            <h4 class="anml-spe">Amazônia</h4>
+            <ul class="anml-data">
+              <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
+              <li class="anml-data-item"><label class="label male">Macho</label></li>
+            </ul>     
+        </ul>
+      </div>
+    </section>
+    <section class="container-anml medium">
     <h3 class="subtitle-anml">Ave</h3>
-    <!--criar carrossel-->
-    <p class = "region">
-      <ul class = "region anml-list">
-        <li class = "anml-card card-medium">
-          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-          <h2 class="anml-name">Jade</h2>
-          <h4 class="anml-spe">Ararinha-azul</h4>
-          <h5 class="anml-spe"><em class="sci-name-item">Cyanopsitta spixii</em></h5>
-          <h4 class="anml-spe">Cerrado</h4>
-          <ul class="anml-data">
-            <li class="anml-data-item"><label class="label ext6">Extinto na Natureza</label></li>
-            <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
-          </ul>    
-        </li>
-      </ul>
-    </p>
-  </section>
-  <section class="container-anml light">
-    <!--criar carrossel-->
-    <h3 class="subtitle-anml">Mamífero</h3>
-    <p class = "region">
-      <ul class = "region anml-list">
-        <li class = "anml-card card-light">
-          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-            <h2 class="anml-name">Juma</h2>
-            <h4 class="anml-spe">Onça-pintada</h4>
-            <h5 class="anml-spe"><em class="sci-name-item">Panthera onca</em></h5>
-            <h4 class="anml-spe">Mata Atlântica</h4>
-          <ul class="anml-data">
-            <li class="anml-data-item"><label class="label ext3">Quase Ameaçado</label></li>
-            <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
+      <div class="carousel">
+        <ul class = " carousel-list region anml-list">
+          <li class = "carousel-item anml-card card-medium">
+            <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+            <h2 class="anml-name">Jade</h2>
+            <h4 class="anml-spe">Ararinha-azul</h4>
+            <h5 class="anml-spe"><em class="sci-name-item">Cyanopsitta spixii</em></h5>
+            <h4 class="anml-spe">Cerrado</h4>
+            <ul class="anml-data">
+              <li class="anml-data-item"><label class="label ext6">Extinto na Natureza</label></li>
+              <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
+            </ul>    
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="container-anml light">
+      <h3 class="subtitle-anml">Mamífero</h3>
+          <ul class = "carousel-list region anml-list">
+            <li class = "carousel-item anml-card card-light">
+              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+                <h2 class="anml-name">Juma</h2>
+                <h4 class="anml-spe">Onça-pintada</h4>
+                <h5 class="anml-spe"><em class="sci-name-item">Panthera onca</em></h5>
+                <h4 class="anml-spe">Mata Atlântica</h4>
+              <ul class="anml-data">
+                <li class="anml-data-item"><label class="label ext3">Quase Ameaçado</label></li>
+                <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
+              </ul>
+            </li>
+            <li class = "carousel-item anml-card card-light">
+              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+              <h2 class="anml-name">Solar</h2>
+              <h4 class="anml-spe">Mico-leão-dourado</h4>
+              <h5 class="anml-spe"><em class="sci-name-item">Leontopithecus rosalia</em></h5>
+              <h4 class="anml-spe">Mata Atlântica</h4>
+              <ul class="anml-data">
+                <li class="anml-data-item"><label class="label ext4">Ameaçado</label></li>
+                <li class="anml-data-item"><label class="label male">Macho</label></li>
+              </ul>
+            </li>
+            <li class = "carousel-item anml-card card-light">
+              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+              <h2 class="anml-name">Sombra</h2>
+              <h4 class="anml-spe">Gato-do-mato</h4>
+              <h5 class="anml-spe"><em class="sci-name-item">Leopardus wiedii</em></h5>
+              <h4 class="anml-spe">Mata Atlântica</h4>
+              <ul class="anml-data">
+                <li class="anml-data-item"><label class ="label ext3">Quase Ameaçado</label></li>
+                <li class="anml-data-item"><label class="label male">Macho</label></li>
+              </ul>
+            </li>
+            <li class = "carousel-item anml-card card-light"> 
+              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+              <h2 class="anml-name">Pitanga</h2>
+              <h4 class="anml-spe">Jaguatirica</h4>
+              <h5 class="anml-spe"><em class="sci-name-item">Leopardus pardalis</em></h5>
+              <h4 class="anml-spe">Mata Atlântica</h4>
+              <ul class="anml-data">
+                <li class="anml-data-item"><label class ="label ext1">Pouco Ameaçado</label></li>
+                <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
+              </ul>           
+            </li>
+            <li class = "carousel-item anml-card card-light">
+              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+              <h2 class="anml-name">Tande</h2>
+              <h4 class="anml-spe">Tamanduá-bandeira</h4>
+              <h5 class="anml-spe"><em class="sci-name-item">Myrmecophaga tridactyla</em></h5>
+              <h4 class="anml-spe">Cerrado</h4>
+              <ul class="anml-data">
+                <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
+                <li class="anml-data-item"><label class="label male">Macho</label></li>
+              </ul>      
+            </li>
+            <li class = "carousel-item anml-card card-light">
+              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+              <h2 class="anml-name">Guaraná</h2>
+              <h4 class="anml-spe">Lobo-guará</h4>
+              <h5 class="anml-spe"><em class="sci-name-item">Chrysocyon brachyurus</em></h5>
+              <h4 class="anml-spe">Cerrado</h4>
+              <ul class="anml-data">
+                <li class="anml-data-item"><label class="label ext2">Quase Ameaçado</label></li>
+                <li class="anml-data-item"><label class="label male">Macho</label></li>
+              </ul>
+            </li> 
+            <li class = "carousel-item anml-card card-light">
+              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+              <h2 class="anml-name">Yara</h2>
+              <h4 class="anml-spe">Peixe-boi</h4>
+              <h5 class="anml-spe"><em class="sci-name-item">Trichechus inunguis</em></h5>
+              <h4 class="anml-spe">Amazônia</h4>
+              <ul class="anml-data">
+                <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
+                <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
+              </ul>
+            </li>
+            <li class = "carousel-item anml-card card-light">
+              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+              <h2 class="anml-name">Fuleco</h2>
+              <h4 class="anml-spe">Tatu-canastra</h4>
+              <h5 class="anml-spe"><em class="sci-name-item">Priodontes maximus</em></h5>
+              <h4 class="anml-spe">Amazônia</h4>
+              <ul class="anml-data">
+                <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
+                <li class="anml-data-item"><label class="label male">Macho</label></li>
+              </ul>     
+            </li>
           </ul>
-        </li>
-        <li class = "anml-card card-light">
-          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-          <h2 class="anml-name">Solar</h2>
-          <h4 class="anml-spe">Mico-leão-dourado</h4>
-          <h5 class="anml-spe"><em class="sci-name-item">Leontopithecus rosalia</em></h5>
-          <h4 class="anml-spe">Mata Atlântica</h4>
-          <ul class="anml-data">
-            <li class="anml-data-item"><label class="label ext4">Ameaçado</label></li>
-            <li class="anml-data-item"><label class="label male">Macho</label></li>
-          </ul>
-        </li>
-        <li class = "anml-card card-light">
-          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-          <h2 class="anml-name">Sombra</h2>
-          <h4 class="anml-spe">Gato-do-mato</h4>
-          <h5 class="anml-spe"><em class="sci-name-item">Leopardus wiedii</em></h5>
-          <h4 class="anml-spe">Mata Atlântica</h4>
-          <ul class="anml-data">
-            <li class="anml-data-item"><label class ="label ext3">Quase Ameaçado</label></li>
-            <li class="anml-data-item"><label class="label male">Macho</label></li>
-          </ul>
-        </li>
-        <li class = "anml-card card-light"> 
-          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-          <h2 class="anml-name">Pitanga</h2>
-          <h4 class="anml-spe">Jaguatirica</h4>
-          <h5 class="anml-spe"><em class="sci-name-item">Leopardus pardalis</em></h5>
-          <h4 class="anml-spe">Mata Atlântica</h4>
-          <ul class="anml-data">
-            <li class="anml-data-item"><label class ="label ext1">Pouco Ameaçado</label></li>
-            <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
-          </ul>           
-        </li>
-        <li class = "anml-card card-light">
-          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-          <h2 class="anml-name">Tande</h2>
-          <h4 class="anml-spe">Tamanduá-bandeira</h4>
-          <h5 class="anml-spe"><em class="sci-name-item">Myrmecophaga tridactyla</em></h5>
-          <h4 class="anml-spe">Cerrado</h4>
-          <ul class="anml-data">
-            <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
-            <li class="anml-data-item"><label class="label male">Macho</label></li>
-          </ul>      
-        </li>
-        <li class = "anml-card card-light">
-          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-          <h2 class="anml-name">Guaraná</h2>
-          <h4 class="anml-spe">Lobo-guará</h4>
-          <h5 class="anml-spe"><em class="sci-name-item">Chrysocyon brachyurus</em></h5>
-          <h4 class="anml-spe">Cerrado</h4>
-          <ul class="anml-data">
-            <li class="anml-data-item"><label class="label ext2">Quase Ameaçado</label></li>
-            <li class="anml-data-item"><label class="label male">Macho</label></li>
-        <li class = "anml-card card-light">
-          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-          <h2 class="anml-name">Yara</h2>
-          <h4 class="anml-spe">Peixe-boi</h4>
-          <h5 class="anml-spe"><em class="sci-name-item">Trichechus inunguis</em></h5>
-          <h4 class="anml-spe">Amazônia</h4>
-          <ul class="anml-data">
-            <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
-            <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
-          </ul>
-        </li>
-        <li class = "anml-card card-light">
-          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-          <h2 class="anml-name">Fuleco</h2>
-          <h4 class="anml-spe">Tatu-canastra</h4>
-          <h5 class="anml-spe"><em class="sci-name-item">Priodontes maximus</em></h5>
-          <h4 class="anml-spe">Amazônia</h4>
-          <ul class="anml-data">
-            <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
-            <li class="anml-data-item"><label class="label male">Macho</label></li>
-          </ul>     
-        </li>
-      </ul>
-    </p>
-  </section>
+          <div class="carousel-indicators"></div>
+        </div>
+    </section>
+
     <script src="../menu.js"></script>
+    <script src="../carousel.js"></script>
   </body>
 </html>
