--- a/Front/vite-project/src/templates/animais_regioes.html
+++ b/Front/vite-project/src/templates/animais_regioes.html
@@ -5,7 +5,8 @@
     <!--Styles-->
     <link rel="stylesheet" href="../index.css"/>
     <link rel="stylesheet" href="../reset.css"/>
-    <link rel="stylesheet" href="../static/animais_regioes.css">
+    <link rel="stylesheet" href="../static/animais_regioes.css"/>
+    <link rel="stylesheet" href="../static/carousel.css"/>
     <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,10 +64,9 @@
     <h2 class="title-principal title-anml">Nossos animais e seus habitats!</h2>
     <section class="container-anml light">
     <h3 class="subtitle-anml">Amazônia</h3>
-    <!--criar carrossel-->
-    <p class = "region">
-      <ul class = "region anml-list">
-          <li class = "anml-card card-light">
+    <div class="carousel">
+      <ul class = "carousel-list region anml-list">
+          <li class = "carousel-item anml-card card-light">
           <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
             <h2 class="anml-name">Yara</h2>
             <h4 class="anml-spe">Peixe-boi</h4>
@@ -77,8 +77,7 @@
             <li class="anml-data-item"><label class="label mam">Mamífero</label></li>
           </ul>
         </li>
-     
-       <li class = "anml-card card-light">
+        <li class = "carousel-item anml-card card-light">
           <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
           <h2 class="anml-name">Fuleco</h2>
           <h4 class="anml-spe">Tatu-canastra</h4>
@@ -89,7 +88,7 @@
             <li class="anml-data-item"><label class="label mam">Mamífero</label></li>
           </ul>     
         </li>
-        <li class = "anml-card card-light">
+        <li class = "carousel-item anml-card card-light">
           <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
           <h2 class="anml-name">Iporã</h2>
           <h4 class="anml-spe">Jabuti-tinga</h4>
@@ -101,16 +100,14 @@
           </ul>     
         </li>
       </ul>
-    </p>
-  </div>
+    </div>
     
   </section>
   <section class="container-anml medium">
     <h3 class="subtitle-anml">Cerrado</h3>
-    <!--criar carrossel-->
-    <p class = "region">
-      <ul class = "region anml-list">
-        <li class = "anml-card card-medium">
+    <div class="carousel">
+      <ul class = "carousel-list region anml-list">
+        <li class = "carousel-item anml-card card-medium">
           <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
           <h2 class="anml-name">Jade</h2>
           <h4 class="anml-spe">Ararinha-azul</h4>
@@ -121,7 +118,7 @@
             <li class="anml-data-item"><label class="label ave">Ave</label></li>
           </ul>    
         </li>
-        <li class = "anml-card card-medium">
+        <li class = "carousel-item anml-card card-medium">
           <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
           <h2 class="anml-name">Tande</h2>
           <h4 class="anml-spe">Tamanduá-bandeira</h4>
@@ -132,7 +129,7 @@
             <li class="anml-data-item"><label class="label mam">Mamífero</label></li>
           </ul>      
         </li>
-        <li class = "anml-card card-medium">
+        <li class = "carousel-item anml-card card-medium">
           <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
           <h2 class="anml-name">Guaraná</h2>
           <h4 class="anml-spe">Lobo-guará</h4>
@@ -144,14 +141,13 @@
           </ul>     
         </li>
       </ul>
-    </p>
+    </div>  
   </section>
   <section class="container-anml light">
-    <!--criar carrossel-->
+    <div class="carousel">
     <h3 class="subtitle-anml">Mata Atlântica</h3>
-    <p class = "region">
-      <ul class = "region anml-list">
-        <li class = "anml-card card-light">
+      <ul class = "carousel-list region anml-list">
+        <li class = "carousel-item anml-card card-light">
           <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
             <h2 class="anml-name">Juma</h2>
             <h4 class="anml-spe">Onça-pintada</h4>
@@ -162,7 +158,7 @@
             <li class="anml-data-item"><label class="label mam">Mamífero</label></li>
           </ul>
         </li>
-        <li class = "anml-card card-light">
+        <li class = "carousel-item anml-card card-light">
           <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
           <h2 class="anml-name">Solar</h2>
           <h4 class="anml-spe">Mico-leão-dourado</h4>
@@ -173,7 +169,7 @@
             <li class="anml-data-item"><label class="label mam">Mamífero</label></li>
           </ul>
         </li>
-        <li class = "anml-card card-light">
+        <li class = "carousel-item anml-card card-light">
           <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
           <h2 class="anml-name">Sombra</h2>
           <h4 class="anml-spe">Gato-do-mato</h4>
@@ -184,7 +180,7 @@
             <li class="anml-data-item"><label class="label mam">Mamífero</label></li>
           </ul>
         </li>
-        <li class = "anml-card card-light"> 
+        <li class = "carousel-item anml-card card-light"> 
           <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
           <h2 class="anml-name">Pitanga</h2>
           <h4 class="anml-spe">Jaguatirica</h4>
@@ -196,9 +192,11 @@
           </ul>           
         </li>
       </ul>
-    </p>
+    </div>
   </section>
+  
     <script src="../menu.js"></script>
+    <script src="../carousel.js"></script>
   </body>
   </html>
 
